--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Moon Camp 2023</title>
+    <title>Moon Camp Project 2024</title>
     <style>
         body {
             background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/5/5b/Moon-apollo17-schmitt_boulder.jpg/1200px-Moon-apollo17-schmitt_boulder.jpg");
@@ -37,10 +37,10 @@
 </head>
 <body>
     <div class="menu"> 
-        <a href="D:\Moon camp\index1.html" class="home">Accueil</a>
-        <a href="D:\Moon camp\Models.html" class="models">Modèles 3D & Plans</a>
-        <a href="D:\Moon camp\Thanks.html" class="thanks">Remmerciments</a>
-        <a href="D:\Moon camp\Others.html" class="others">Autres</a>
+        <a href="D:\Moon camp\index1.html" class="home">Home</a>
+        <a href="D:\Moon camp\Models.html" class="models">3D Models</a>
+        <a href="D:\Moon camp\Thanks.html" class="thanks">Thanks</a>
+        <a href="D:\Moon camp\Others.html" class="others">Report</a>
     </div>
     <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
         <h1 style="text-align: center; font-size: 8em;">Moon Camp 2023/2024</h1>
