--- a/Report.html
+++ b/Report.html
@@ -42,8 +42,8 @@
         <a href="D:\Moon camp\Thanks.html" class="thanks">Remmerciments</a>
         <a href="D:\Moon camp\Others.html" class="others">Autres</a>
     </div>
-    <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
-        <h1 style="text-align: center; font-size: 8em;">Autres</h1>
-    </div>
+    <p>
+    Coming Soon...
+    </p>
 </body>
 </html>
