--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 </head>
 <body>
     <div class="menu"> 
-        <a href="D:\Moon camp\index1.html" class="home">Home</a>
-        <a href="D:\Moon camp\Models.html" class="models">3D Models</a>
+        <a href="index.html" class="home">Home</a>
+        <a href="Models.html" class="models">3D Models</a>
         <a href="D:\Moon camp\Thanks.html" class="thanks">Thanks</a>
-        <a href="D:\Moon camp\Others.html" class="others">Report</a>
+        <a href="Report.html" class="others">Report</a>
     </div>
     <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
         <h1 style="text-align: center; font-size: 8em;">Moon Camp 2023/2024</h1>
