--- a/Models.html
+++ b/Models.html
@@ -59,19 +59,14 @@
 </head>
 <body>
     <div class="menu"> 
-        <a href="D:\Moon camp\index1.html" class="home">Accueil</a>
-        <a href="D:\Moon camp\Models.html" class="models">Modèles 3D & Plans</a>
-        <a href="D:\Moon camp\Thanks.html" class="thanks">Remmerciments</a>
-        <a href="D:\Moon camp\Others.html" class="others">Autres</a>
+        <a href="index.html" class="home">Home</a>
+        <a href="Models.html" class="models">3D Models</a>
+        <a href="D:\Moon camp\Thanks.html" class="thanks">Thanks</a>
+        <a href="Report.html" class="others">Report</a>
     </div>
     <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
         <h1 style="text-align: center; font-size: 8em;">3D models</h1>
     </div>
-    <footer class="footer">
-        <a href="D:\Moon camp\index1.html" class="home">Sources</a>
-        <a href="D:\Moon camp\Models.html" class="models">CGU</a>
-        <a href="D:\Moon camp\Thanks.html" class="thanks">Plan du site</a>
-        <a href="D:\Moon camp\Others.html" class="others">Licence</a>
-    </footer>
+   <p> Coming Soon...</p>
 </body>
 </html>
