--- a/Report.html
+++ b/Report.html
@@ -37,10 +37,10 @@
 </head>
 <body>
     <div class="menu"> 
-        <a href="D:\Moon camp\index1.html" class="home">Accueil</a>
-        <a href="D:\Moon camp\Models.html" class="models">Modèles 3D & Plans</a>
-        <a href="D:\Moon camp\Thanks.html" class="thanks">Remmerciments</a>
-        <a href="D:\Moon camp\Others.html" class="others">Autres</a>
+        <a href="index.html" class="home">Home</a>
+        <a href="Models.html" class="models">3D Models</a>
+        <a href="D:\Moon camp\Thanks.html" class="thanks">Thanks</a>
+        <a href="Report.html" class="others">Report</a>
     </div>
     <p>
     Coming Soon...
