--- a/Report.html
+++ b/Report.html
@@ -39,7 +39,7 @@
     <div class="menu"> 
         <a href="index.html" class="home">Home</a>
         <a href="Models.html" class="models">3D Models</a>
-        <a href="D:\Moon camp\Thanks.html" class="thanks">Thanks</a>
+        <a href="Thanks.html" class="thanks">Thanks</a>
         <a href="Report.html" class="others">Report</a>
     </div>
     <p>
