--- a/Models.html
+++ b/Models.html
@@ -51,7 +51,12 @@
             background-color: rgb(182, 8, 8);
             color: rgb(255, 255, 255);
         }
-
+        .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
         
     </style>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -65,7 +70,7 @@
         <a href="Report.html" class="others">Report</a>
     </div>
     <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
-        <h1 style="text-align: center; font-size: 8em;">3D models</h1>
+        <h1 style="text-align: center; font-size: 8em;">3D model</h1>
     </div>
    <iframe src="https://icloud99269.autodesk360.com/shares/public/SH512d4QTec90decfa6e1660102354463896?mode=embed" width="1024" height="768" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
 </body>
