--- a/Report.html
+++ b/Report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Moon Camp 2023</title>
+    <title>Moon Camp 2024</title>
     <style>
         body {
             background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/5/5b/Moon-apollo17-schmitt_boulder.jpg/1200px-Moon-apollo17-schmitt_boulder.jpg");
@@ -45,9 +45,9 @@
         <a href="Report.html" class="others">Report</a>
     </div>
     <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
-        <h1 style="text-align: center; font-size: 8em;">3D Model</h1>
+        <h1 style="text-align: center; font-size: 8em;">Report</h1>
     </div>
-<h2><a href="https://drive.proton.me/urls/ARXTFBM4MM#4ZQomWogx7Jp" target="_blank">Link to our report</a>
+<h2 style="text-align: center; font-size: 8em;"><a href="https://drive.proton.me/urls/ARXTFBM4MM#4ZQomWogx7Jp" target="_blank">Link to our report</a>
 </h2>
 </body>
 </html>
