--- a/Report.html
+++ b/Report.html
@@ -47,7 +47,7 @@
     <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
         <h1 style="text-align: center; font-size: 8em;">Report</h1>
     </div>
-<h2 style="text-align: center; font-size: 8em;"><a href="https://drive.proton.me/urls/ARXTFBM4MM#4ZQomWogx7Jp" target="_blank">Link to our report</a>
+<h2 style="text-align: center; font-size: 8em;"><a href="https://drive.proton.me/urls/ARXTFBM4MM#4ZQomWogx7Jp" target="_blank">Our Report</a>
 </h2>
 </body>
 </html>
