--- a/Report.html
+++ b/Report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Moon Camp 2024</title>
+    <title>AstroCamp 2024</title>
     <style>
         body {
             background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/5/5b/Moon-apollo17-schmitt_boulder.jpg/1200px-Moon-apollo17-schmitt_boulder.jpg");
