--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="Report.html" class="others">Report</a>
     </div>
     <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
-        <h1 style="text-align: center; font-size: 8em;">Moon Camp 2023/2024</h1>
+        <h1 style="text-align: center; font-size: 8em;">AstroCamp 2023/2024</h1>
     </div>
 </body>
 </html>
