--- a/Models.html
+++ b/Models.html
@@ -64,13 +64,13 @@
 </head>
 <body>
     <div class="menu"> 
-        <a href="index.html" class="home">Home</a>
-        <a href="Models.html" class="models">3D Models</a>
-        <a href="Report.html" class="others">Report</a>
+        <a href="https://mooncampprojectimmacpau.github.io/index.html" class="home">Home</a>
+        <a href="https://mooncampprojectimmacpau.github.io/Models.html" class="models">3D Models</a>
+        <a href="https://mooncampprojectimmacpau.github.io/Report.html" class="others">Report</a>
     </div>
-    <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
+    <div style="display: flex; align-items: center; justify-content: center; height: 100vh; flex-direction: column">
         <h1 style="text-align: center; font-size: 8em;">3D model</h1>
+        <iframe src="./AstroCamp 2024_files/SH512d4QTec90decfa6e1660102354463896.html" width="1024" height="768" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" frameborder="0"></iframe>
     </div>
-   <iframe src="https://icloud99269.autodesk360.com/shares/public/SH512d4QTec90decfa6e1660102354463896?mode=embed" width="1024" height="768" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
 </body>
 </html>
