--- a/Models.html
+++ b/Models.html
@@ -70,7 +70,7 @@
     </div>
     <div style="display: flex; align-items: center; justify-content: center; height: 100vh; flex-direction: column">
         <h1 style="text-align: center; font-size: 8em;">3D model</h1>
-        <iframe src="./AstroCamp 2024_files/SH512d4QTec90decfa6e1660102354463896.html" width="1024" height="768" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" frameborder="0"></iframe>
+        <iframe src="https://icloud99269.autodesk360.com/shares/public/SH512d4QTec90decfa6e1660102354463896?mode=embed" width="1024" height="768" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" frameborder="0"></iframe>
     </div>
 </body>
 </html>
