--- a/Report.html
+++ b/Report.html
@@ -33,13 +33,26 @@
         }
         h2 {
             text-align: center;
-          }
+        }
+        .bouton {
+            background-color: rgb(182,8,8); /* rouge */
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 12px;
+            font-size: 2em; /* Taille du texte */
+        }
     </style>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-</head>
 <body>
-        <div class="menu"> 
+    <div class="menu">
         <a href="index.html" class="home">Home</a>
         <a href="Models.html" class="models">3D Models</a>
         <a href="Report.html" class="others">Report</a>
@@ -47,7 +60,8 @@
     <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
         <h1 style="text-align: center; font-size: 8em;">Report</h1>
     </div>
-<h2 style="text-align: center; font-size: 8em;"><a href="https://drive.proton.me/urls/ARXTFBM4MM#4ZQomWogx7Jp" target="_blank">Our Report</a>
-</h2>
+    <div style="text-align: center;">
+        <button class="bouton" onclick="window.location.href='https://www.nouveau-lien.com';">Our Report</button>
+    </div>
 </body>
 </html>
