--- a/Report.html
+++ b/Report.html
@@ -61,7 +61,7 @@
         <h1 style="text-align: center; font-size: 8em;">Report</h1>
     </div>
     <div style="text-align: center;">
-        <button class="bouton" onclick="window.location.href='https://www.nouveau-lien.com';">Our Report</button>
+        <button class="bouton" onclick="window.location.href='https://drive.proton.me/urls/ARXTFBM4MM#4ZQomWogx7Jp';">Our Report</button>
     </div>
 </body>
 </html>
